--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,3 +14,9 @@ body {
     filter: drop-shadow(5px 5px 5px #222);
     height: 50%;
 }
+
+.coming-soon {
+    margin: auto;
+    width: 50%;
+    display: block;
+}
